# CompressIt

./: CMakeCache.txt  CMakeLists.txt  README.md  main.c
include/: zlss.h
src/: zlss.c
